--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production unleash",
-    "test:ci": "echo 'no tests for unleash-docker';"
+    "lint": "eslint index.js",
+    "test": "mocha"
   },
   "engines": {
     "node": "8"
@@ -12,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-standard": "^4.0.0",
     "unleash-server": "^3.2.1"
   }
 }
