--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-standard": "^4.0.0",
     "unleash-server": "^3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
