--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@passport-next/passport": "^2.1.0",
     "@passport-next/passport-google-oauth2": "^1.0.0",
-    "unleash-server": "^3.2.1"
+    "unleash-server": "3.2.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
