Updates up to 28.08.2020 (#2)
* chore: Bump unleash to version 3.2.5

* fix: update unleash to version 3.2.9

* Update to Unleash 3.2.12

* Use Node 10.x (LTS) to run Unleash

* fix: update to unleash-server version 3.2.13

closes #19

* fix: update to unleash-server version 3.2.14

* Fix typo (#20)

* Create LICENSE.md

* Update to unleash-server version 3.2.22 (#23)

* fix: Update unleash-server to version 3.2.23

* fix: Remove unused reference (#24)

* fix: upgrade unleash-server to 3.2.27

* fix: upgrade unleash to version 3.2.30

* Fix: Add dependency for securing unleash

* Adding all packages needed by examples here: https://github.com/Unleash/unleash/tree/master/examples

* Updating unleash-server version.

Co-authored-by: Ivar Conradi Østhus <ivarconr@gmail.com>

* fix: update lock file

* fix: add enviornment variables for postgres

* fix: unleash-server needs node:12 (#26)

* fix: upgrade to unleash 3.3.0

* chore: fix typo on readme

* fix: upgrade unleash-server to 3.3.6

* fix: upgrade to unleash v3.4.2

* chore: update README.md

* Fix merge conflicts

Co-authored-by: Ivar Conradi Østhus <ivarconr@gmail.com>
Co-authored-by: ivaosthu <ivar.conradi.osthus@finn.no>
Co-authored-by: Jochen Schalanda <jochen@schalanda.name>
Co-authored-by: Jonathan Hult <jonathan@jonathanhult.com>
Co-authored-by: Tim Peeters <timpeeters@users.noreply.github.com>
Co-authored-by: Juan Hoyos <juan.hoyosr@gmail.com>
Co-authored-by: Evans Tucker <evans.tucker@gmail.com>
Co-authored-by: Hüseyin Mert <huseyinin@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "description": "Docker images for unleash.",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production unleash",
+    "start": "NODE_ENV=production node index.js",
     "lint": "eslint index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "test:ci": "echo 'no tests for unleash-docker';"
   },
   "engines": {
-    "node": "8"
+    "node": ">=12"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@passport-next/passport": "^2.1.0",
+    "@exlinc/keycloak-passport": "^1.0.2",
+    "@passport-next/passport": "^3.1.0",
     "@passport-next/passport-google-oauth2": "^1.0.0",
-    "unleash-server": "3.2.1"
+    "basic-auth": "^2.0.1",
+    "passport": "^0.4.1",
+    "unleash-server": "^3.4.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
